--- a/Webserver/index.html
+++ b/Webserver/index.html
@@ -1,27 +1,94 @@
 <!DOCTYPE html>
+
 <html lang ="en">
+
     <head>
+
         <meta charset="UTF-8">
+
         <title>Air Quality Assessment</title>
+
     </head>
+
     <body>
+
         <h1>Air Quality Assessment</h1>
+
             <div id="banner">
+
                 <div class="inline-block">
-                    <h2>IB410</h2>
-                    <img src="images/ib410.png" alt="IB410">
-                    <img src="images/ib411.png" alt="IB411">
+
+                    <h2>SL_TB_0</h2>
+
+                    <img src="Air_SL_TB_0.png" alt="Air_SL_TB_0">
+
+                    <img src="Light_SL_TB_0.png" alt="Light_SL_TB_0">
+
+                    <img src="Sound_SL_TB_0.png" alt="Sound_SL_TB_0">
+
+                    <img src="Temperature_SL_TB_0.png" alt="Temperature_SL_TB_0">
+
                 </div>
+
                 <div class="inline-block">
-                    <h2>IB411</h2>
-                    <img src="images/ib412.png" alt="IB412">
-                    <img src="images/ib413.png" alt="IB413">
+
+                    <h2>SL_TB_1</h2>
+
+                    <img src="Air_SL_TB_1.png" alt="Air_SL_TB_1">
+
+                    <img src="Light_SL_TB_1.png" alt="Light_SL_TB_1">
+
+                    <img src="Sound_SL_TB_1.png" alt="Sound_SL_TB_1">
+
+                    <img src="Temperature_SL_TB_1.png" alt="Temperature_SL_TB_1">
+
                 </div>
+
                 <div class="inline-block">
-                    <h2>IB413</h2>
-                    <img src="images/ib415.png" alt="IB415">
-                    <img src="images/ib413.png" alt="IB413">
+
+                    <h2>SL_TB_2</h2>
+
+                    <img src="Air_SL_TB_2.png" alt="Air_SL_TB_2">
+
+                    <img src="Light_SL_TB_2.png" alt="Light_SL_TB_2">
+
+                    <img src="Sound_SL_TB_2.png" alt="Sound_SL_TB_2">
+
+                    <img src="Temperature_SL_TB_2.png" alt="Temperature_SL_TB_2">
+
                 </div>
+
+                <div class="inline-block">
+
+                    <h2>SL_TB_3</h2>
+
+                    <img src="Air_SL_TB_3.png" alt="Air_SL_TB_3">
+
+                    <img src="Light_SL_TB_3.png" alt="Light_SL_TB_3">
+
+                    <img src="Sound_SL_TB_3.png" alt="Sound_SL_TB_3">
+
+                    <img src="Temperature_SL_TB_3.png" alt="Temperature_SL_TB_3">
+
+                </div>
+
+                <div class="inline-block">
+
+                    <h2>SL_TB_4</h2>
+
+                    <img src="Air_SL_TB_4.png" alt="Air_SL_TB_4">
+
+                    <img src="Light_SL_TB_4.png" alt="Light_SL_TB_4">
+
+                    <img src="Sound_SL_TB_4.png" alt="Sound_SL_TB_4">
+
+                    <img src="Temperature_SL_TB_4.png" alt="Temperature_SL_TB_4">
+
+                </div>
+
             </div>
+
     </body>
+
 </html>
+
